--- a/app/index.html
+++ b/app/index.html
@@ -54,12 +54,55 @@
             <img class="user-nav__img" src="images/icon/menu-dots.svg" alt="menu">
           </a>
         </div> -->
+        </div>
       </div>
-    </div>
   </header>
-  <main class="main">
 
+  <main class="main">
+    <section class="top-slider">
+      <div class="container">
+        <div class="top-slider__inner">
+          <div class="top-slider__item">
+            <div class="top-slider__content">
+              <h3 class="top-slider__title">SMART AND TRENDY</h3>
+              <p class="top-slider__text">
+                Dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt
+              </p>
+              <div class="top-slider__btn">
+                <a class="top-slider__link" href="#">Shop Now</a>
+              </div>
+            </div>
+            <img class="top-slider__image" src="images/slider/top-slider-bg.png" alt="Изображение дивана">
+          </div>
+          <div class="top-slider__item">
+            <div class="top-slider__content">
+              <h3 class="top-slider__title">SMART AND TRENDY</h3>
+              <p class="top-slider__text">
+                Dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt
+              </p>
+              <div class="top-slider__btn">
+                <a class="top-slider__link" href="#">Shop Now</a>
+              </div>
+            </div>
+            <img class="top-slider__image" src="images/slider/top-slider-bg.png" alt="Изображение дивана">
+          </div>
+          <div class="top-slider__item">
+            <div class="top-slider__content">
+              <h3 class="top-slider__title">SMART AND TRENDY</h3>
+              <p class="top-slider__text">
+                Dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt
+              </p>
+              <div class="top-slider__btn">
+                <a class="top-slider__link" href="#">Shop Now</a>
+              </div>
+            </div>
+            <img class="top-slider__image" src="images/slider/top-slider-bg.png" alt="Изображение дивана">
+          </div>
+        </div>
+      </div>
+    </section>
   </main>
+
   <footer class="footer">
     <div class="container">
       <div class="footer-top">
