--- a/app/index.html
+++ b/app/index.html
@@ -101,6 +101,33 @@
         </div>
       </div>
     </section>
+
+    <div class="features">
+      <div class="container">
+        <div class="features__items">
+          <div class="features__item features__item--support">
+            <h6 class="features__title">Support 24/7.</h6>
+            <p class="features__text">
+              Contact us 24 hours a day, <br>
+              7 days a week.
+            </p>
+          </div>
+          <div class="features__item features__item--truck">
+            <h6 class="features__title">Delivery.</h6>
+            <p class="features__text">
+              Free shipping on all US order.
+            </p>
+          </div>
+          <div class="features__item features__item--secure">
+            <h6 class="features__title">100% Payment secure.</h6>
+            <p class="features__text">
+              We ensure secure payment
+              with PEV.
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
   </main>
 
   <footer class="footer">
@@ -138,7 +165,7 @@
           </ul>
         </div>
         <div class="footer-top__item">
-          <h6 class="footer-top__title">Account</h6>
+          <h6 class="title footer-top__title">Account</h6>
           <ul class="footer-top__list">
             <li class="footer-top__list-item">
               <a class="footer-top__link" href="#">Your Account</a>
