--- a/app/index.html
+++ b/app/index.html
@@ -128,6 +128,14 @@
         </div>
       </div>
     </div>
+
+    <div class="video">
+      <div class="container">
+        <a class="video__link" href="#">
+          <img class="video__img" src="images/icon/play-icon.svg" alt="play video">
+        </a>
+      </div>
+    </div>
   </main>
 
   <footer class="footer">
