--- a/app/index.html
+++ b/app/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/style.min.css">
-  <title>Document</title>
+  <title>Glee</title>
 </head>
 
 <body>
@@ -139,7 +139,7 @@
           <button class="product__button" data-filter=".category-c">Lighting</button>
           <button class="product__button" data-filter=".category-d">Decor</button>
         </div>
-        <div class="product__items">
+        <div class="product__items" data-ref="container-1">
           <div class="product__item mix category-a">
             <div class="product__item-img__box">
               <img class="product__item-img" src="images/products/product-1.jpg" alt="Товар">
@@ -379,6 +379,45 @@
         </div>
       </div>
     </div>
+
+    <section class="product-design">
+      <div class="container-content">
+        <h3 class="title product-design__title">New Design</h3>
+        <div class="product-design__buttons">
+          <button class="product-design__button" data-filter="all">All</button>
+          <button class="product-design__button" data-filter=".category-furnitures">Furnitures</button>
+          <button class="product-design__button" data-filter=".category-chairs">Chairs</button>
+          <button class="product-design__button" data-filter=".category-lighting">Lighting</button>
+          <button class="product-design__button" data-filter=".category-decor">Decor</button>
+        </div>
+        <div class="product-design__items" data-ref="container-2">
+          <div class="product-design__item mix category-furnitures" style="background-image: url('images/product-design/1.jpg');">
+            <h4 class="product-design__subtitle">Beat Flat Pendant Black</h4>
+            <p class="product-design__text">Classic</p>
+          </div>
+          <div class="product-design__item mix category-chairs" style="background-image: url('images/product-design/2.jpg');">
+            <h4 class="product-design__subtitle">Lampe Sur Pieds Bamboo</h4>
+            <p class="product-design__text">Classic</p>
+          </div>
+          <div class="product-design__item mix category-lighting" style="background-image: url('images/product-design/3.jpg');">
+            <h4 class="product-design__subtitle">Rattan Rocking Chair</h4>
+            <p class="product-design__text">Classic</p>
+          </div>
+          <div class="product-design__item mix category-chairs" style="background-image: url('images/product-design/4.jpg');">
+            <h4 class="product-design__subtitle">Rattan Rocking Chair</h4>
+            <p class="product-design__text">Classic</p>
+          </div>
+          <div class="product-design__item mix category-decor" style="background-image: url('images/product-design/5.jpg');">
+            <h4 class="product-design__subtitle">Rattan Rocking Chair</h4>
+            <p class="product-design__text">Classic</p>
+          </div>
+          <div class="product-design__item mix category-decor" style="background-image: url('images/product-design/6.jpg');">
+            <h4 class="product-design__subtitle">Lampe Sur Pieds Bamboo</h4>
+            <p class="product-design__text">Classic</p>
+          </div>
+        </div>
+      </div>
+    </section>
 
     <!-- <div class="video">
       <div class="container">
