added blog, added partners, fixed product and design product

--- a/app/index.html
+++ b/app/index.html
@@ -129,7 +129,7 @@
       </div>
     </div>
 
-    <section class="product">
+    <section class="product" data-ref="container-1">
       <div class="container-content">
         <h3 class="title product__title">Products of the week</h3>
         <div class="product__buttons">
@@ -139,7 +139,7 @@
           <button class="product__button" data-filter=".category-c">Lighting</button>
           <button class="product__button" data-filter=".category-d">Decor</button>
         </div>
-        <div class="product__items" data-ref="container-1">
+        <div class="product__items">
           <div class="product__item mix category-a">
             <div class="product__item-img__box">
               <img class="product__item-img" src="images/products/product-1.jpg" alt="Товар">
@@ -380,7 +380,7 @@
       </div>
     </div>
 
-    <section class="product-design">
+    <section class="product-design" data-ref="container-2">
       <div class="container-content">
         <h3 class="title product-design__title">New Design</h3>
         <div class="product-design__buttons">
@@ -390,47 +390,138 @@
           <button class="product-design__button" data-filter=".category-lighting">Lighting</button>
           <button class="product-design__button" data-filter=".category-decor">Decor</button>
         </div>
-        <div class="product-design__items" data-ref="container-2">
-          <div class="product-design__item mix category-furnitures" style="background-image: url('images/product-design/1.jpg');">
-            <h4 class="product-design__subtitle">Beat Flat Pendant Black</h4>
+        <div class="product-design__items">
+          <div class="product-design__item mix category-furnitures"
+            style="background-image: url('images/product-design/1.jpg');">
+            <a class="product-design__subtitlelink" href="#">
+              <h4 class="product-design__subtitle">Beat Flat Pendant Black</h4>
+            </a>
             <p class="product-design__text">Classic</p>
           </div>
-          <div class="product-design__item mix category-chairs" style="background-image: url('images/product-design/2.jpg');">
-            <h4 class="product-design__subtitle">Lampe Sur Pieds Bamboo</h4>
+          <div class="product-design__item mix category-chairs"
+            style="background-image: url('images/product-design/2.jpg');">
+            <a class="product-design__subtitlelink" href="#">
+              <h4 class="product-design__subtitle">Lampe Sur Pieds Bamboo</h4>
+            </a>
             <p class="product-design__text">Classic</p>
           </div>
-          <div class="product-design__item mix category-lighting" style="background-image: url('images/product-design/3.jpg');">
-            <h4 class="product-design__subtitle">Rattan Rocking Chair</h4>
+          <div class="product-design__item mix category-lighting"
+            style="background-image: url('images/product-design/3.jpg');">
+            <a class="product-design__subtitlelink" href="#">
+              <h4 class="product-design__subtitle">Rattan Rocking Chair</h4>
+            </a>
             <p class="product-design__text">Classic</p>
           </div>
-          <div class="product-design__item mix category-chairs" style="background-image: url('images/product-design/4.jpg');">
-            <h4 class="product-design__subtitle">Rattan Rocking Chair</h4>
+          <div class="product-design__item mix category-chairs"
+            style="background-image: url('images/product-design/4.jpg');">
+            <a class="product-design__subtitlelink" href="#">
+              <h4 class="product-design__subtitle">Rattan Rocking Chair</h4>
+            </a>
             <p class="product-design__text">Classic</p>
           </div>
-          <div class="product-design__item mix category-decor" style="background-image: url('images/product-design/5.jpg');">
-            <h4 class="product-design__subtitle">Rattan Rocking Chair</h4>
+          <div class="product-design__item mix category-decor"
+            style="background-image: url('images/product-design/5.jpg');">
+            <a class="product-design__subtitlelink" href="#">
+              <h4 class="product-design__subtitle">Rattan Rocking Chair</h4>
+            </a>
             <p class="product-design__text">Classic</p>
           </div>
-          <div class="product-design__item mix category-decor" style="background-image: url('images/product-design/6.jpg');">
-            <h4 class="product-design__subtitle">Lampe Sur Pieds Bamboo</h4>
+          <div class="product-design__item mix category-decor"
+            style="background-image: url('images/product-design/6.jpg');">
+            <a class="product-design__subtitlelink" href="#">
+              <h4 class="product-design__subtitle">Lampe Sur Pieds Bamboo</h4>
+            </a>
             <p class="product-design__text">Classic</p>
           </div>
         </div>
       </div>
     </section>
 
-    <!-- <div class="video">
+    <div class="video">
       <div class="container">
         <a class="video__link" href="#">
           <img class="video__img" src="images/icon/play-icon.svg" alt="play video">
         </a>
       </div>
-    </div> -->
+    </div>
 
+    <section class="blog">
+      <div class="container-content">
+        <div class="blog__top">
+          <h3 class="title blog__title">Our Insights & Articles</h3>
+          <a class="blog__link" href="#">View All</a>
+        </div>
+        <div class="blog__items">
+          <div class="blog__item">
+            <a class="blog__link-img" href="#">
+              <img class="blog__img" src="images/blog/1.jpg" alt="блог">
+            </a>
+            <div class="blog__text-box">
+              <div class="blog__text">
+                Diusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam
+              </div>
+            </div>
+            <div class="blog__linkbox">
+              <a class="blog__date" href="#"> 28 JANUARY, 2020</a>
+              <a class="blog__author" href="#"> BY ADMIN</a>
+            </div>
+          </div>
+          <div class="blog__item">
+            <a class="blog__link-img" href="#">
+              <img class="blog__img" src="images/blog/2.jpg" alt="блог">
+            </a>
+            <div class="blog__text-box">
+              <div class="blog__text">
+                Aonsectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore
+              </div>
+            </div>
+            <div class="blog__linkbox">
+              <a class="blog__date" href="#"> 28 JANUARY, 2020</a>
+              <a class="blog__author" href="#"> BY ADMIN</a>
+            </div>
+          </div>
+          <div class="blog__item">
+            <a class="blog__link-img" href="#">
+              <img class="blog__img" src="images/blog/3.jpg" alt="блог">
+            </a>
+            <div class="blog__text-box">
+              <div class="blog__text">
+                Rncididunt ut labore et dolore magna aliqua. Ut enim
+              </div>
+            </div>
+            <div class="blog__linkbox">
+              <a class="blog__date" href="#"> 28 JANUARY, 2020</a>
+              <a class="blog__author" href="#"> BY ADMIN</a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="partners">
+        <div class="container-content">
+          <ul class="partners__list">
+            <li class="partners__item">
+              <img class="partners__item-img" src="images/partners/1.png" alt="partner logo">
+            </li>
+            <li class="partners__item">
+              <img class="partners__item-img" src="images/partners/2.png" alt="partner logo">
+            </li>
+            <li class="partners__item">
+              <img class="partners__item-img" src="images/partners/3.png" alt="partner logo">
+            </li>
+            <li class="partners__item">
+              <img class="partners__item-img" src="images/partners/4.png" alt="partner logo">
+            </li>
+            <li class="partners__item">
+              <img class="partners__item-img" src="images/partners/5.png" alt="partner logo">
+            </li>
+          </ul>
+        </div>
+      </div>
+    </section>
 
   </main>
 
-  <!-- <footer class="footer">
+  <footer class="footer">
     <div class="container-content">
       <div class="footer-top">
         <div class="footer-top__item">
@@ -503,7 +594,7 @@
         </div>
       </div>
     </div>
-  </footer> -->
+  </footer>
   <script src="js/main.min.js"></script>
 </body>
 
