added pagintaion, fixed footer, blog

--- a/app/blog-details.html
+++ b/app/blog-details.html
@@ -59,18 +59,19 @@
   <main class="main">
     <section class="top">
       <div class="container">
-        <h2 class="top__title">Blog</h2>
+        <h2 class="top__title">Blog Details</h2>
         <div class="breadcrumbs">
           <ul class="breadcrumbs__list">
             <li class="breadcrumbs__item">
               <a class="breadcrumbs__item-link" href="#">Home</a>
-              <a class="breadcrumbs__item-link" href="#">Blog </a>
+              <a class="breadcrumbs__item-link" href="#">Blog</a>
+              <a class="breadcrumbs__item-link" href="#">Blog Details</a>
             </li>
           </ul>
         </div>
       </div>
     </section>
-    <section class="blog-page">
+    <section class="blog-page blog-details">
       <div class="container-content">
         <div class="blog-page__inner">
           <div class="blog-page__content">
@@ -81,72 +82,142 @@
                   <a class="blog__author blog__author--user" href="#">BY ADMIN</a>
                 </div>
               </div>
-              <h3 class="blog-page__title">Fonsectetur adipisicing eiusmod</h3>
-              <p class="blog-page__text">
-                consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-                ad minim
-                veniam, quis nostrud exercitation ullamco laboris nisi ut alLorem ipsum dolor sit amet, consectetur
-                adipisicing elit,
-                sed do eiusmod tempor incididunt ut labore et dolore magna
-              </p>
-              <a class="blog-page__link" href="#">View More</a>
-            </div>
-            <div class="blog-page__item">
-              <div class="blog-page__img" style="background-image: url('images/blog/blog-2.jpg');">
-                <div class="blog-page__link-box">
-                  <a class="blog__date" href="#">28 JANUARY, 2020</a>
-                  <a class="blog__author" href="#">BY ADMIN</a>
+              <div class="blog-details">
+                <div class="blog-details__item">
+                  <h3 class="blog-details__title">Fonsectetur adipisicing eiusmod</h3>
+                  <p class="blog-details__description">
+                    Sdipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
+                    minim venia Lorem ipsum
+                    dolor sit amet, consectetur adipisicing elit
+                  </p>
+                  <p class="blog-details__text">
+                    consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+                    enim ad minim
+                    veniam, quis nostrud exercitation ullamco laboris nisi ut alLorem ipsum dolor sit amet, consectetur
+                    adipisicing elit,
+                    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
+                    nostrud exercitation
+                    ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
+                    voluptate velit esse
+                    cillum dolore eu fugiat nulla pariatur.
+                  </p>
+                  <blockquote>
+                    Sdipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
+                    minim veniam, quis
+                    nostrud exercitation ullamco laboris
+                    <span>Wiusmod tempor</span>
+                  </blockquote>
+                  <div class="blog-details__box">
+                    <img class="blog-details__box-img" src="images/blog/blog-details-img.jpg" alt="blog img">
+                    <div class="blog-details__box-content">
+                      <h3 class="blog-details__box-title">Riusmod tempor incididunt</h3>
+                      <p class="blog-details__box-text">
+                        consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                        Ut enim ad minim
+                        veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                      </p>
+                    </div>
+                  </div>
+                  <div class="blog-details__info">
+                    <h5 class="blog-details__info-title">Kajtsal jervcm eoaspckred</h5>
+                    <p class="blog-details__info-text">
+                      consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                      Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                    </p>
+                  </div>
+                  <div class="blog-details__author">
+                    <div class="blog-details__author-inner">
+                      <div class="blog-details__author-info">
+                        <img class="blog-details__author-img" src="images/blog/author-blog.jpg" alt="author img">
+                        <div class="blog-details__author-box">
+                          <p class="blog-details__author-name">Mark N. Hernandez</p>
+                          <p class="blog-details__author-position">Designer</p>
+                        </div>
+                      </div>
+                      <div class="blog-details__author-meta">
+                        <div class="blog-details__author-tags">
+                          <span>Tags:</span> <a href="#">All</a>, <a href="#">Trending</a>
+                        </div>
+                        <div class="blog-details__author-share">
+                          <span>Share:</span>
+                          <a class="blog-details__author-link" href="#">
+                            <img class="blog-details__author-social" src="images/icon/facebook.svg" alt="facebook icon">
+                          </a>
+                          <a class="blog-details__author-link" href="#">
+                            <img class="blog-details__author-social" src="images/icon/twitter.svg" alt="twitter icon">
+                          </a>
+                          <a class="blog-details__author-link" href="#">
+                            <img class="blog-details__author-social" src="images/icon/instagram.svg"
+                              alt="instagram icon">
+                          </a>
+                          <a class="blog-details__author-link" href="#">
+                            <img class="blog-details__author-social" src="images/icon/google-plus.svg"
+                              alt="google icon">
+                          </a>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="blog-details__comments">
+                    <h5 class="blog-details__comments-title">3 Comments</h5>
+                    <div class="blog-details__comments-item">
+                      <img class="blog-details__comments-img" src="images/blog/comment-author-1.jpg" alt="comment img">
+                      <div class="blog-details__comments-inner">
+                        <div class="blog-details__comments-top">
+                          <p class="blog-details__comments-name">Delores G. Roberts</p>
+                          <p class="blog-details__comments-date">Add 11 Oct 2020</p>
+                        </div>
+                        <p class="blog-details__comments-text">
+                          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas fringilla massa et tristique
+                          convallis. Class aptent
+                          taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse
+                          orci sem, ultrices
+                        </p>
+                        <a class="blog-details__comments-link" href="#">Reply</a>
+                      </div>
+                    </div>
+                    <div class="blog-details__comments-item blog-details__comments-item--decor">
+                      <img class="blog-details__comments-img" src="images/blog/comment-author-2.jpg" alt="comment img">
+                      <div class="blog-details__comments-inner">
+                        <div class="blog-details__comments-top">
+                          <p class="blog-details__comments-name">Shannon S. Williams</p>
+                          <p class="blog-details__comments-date">Add 11 Oct 2020</p>
+                        </div>
+                        <p class="blog-details__comments-text">
+                          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas fringilla massa et tristique
+                          convallis. Class aptent
+                          taciti sociosqu ad litora torquent per conubia nostra
+                        </p>
+                        <a class="blog-details__comments-link" href="#">Reply</a>
+                      </div>
+                    </div>
+                    <div class="blog-details__comments-item">
+                      <img class="blog-details__comments-img" src="images/blog/comment-author-3.jpg" alt="comment img">
+                      <div class="blog-details__comments-inner">
+                        <div class="blog-details__comments-top">
+                          <p class="blog-details__comments-name">Nicholas R. Coley</p>
+                          <p class="blog-details__comments-date">Add 11 Oct 2020</p>
+                        </div>
+                        <p class="blog-details__comments-text">
+                          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas fringilla massa et tristique
+                          convallis. Class aptent
+                          taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse
+                          orci sem,
+                        </p>
+                        <a class="blog-details__comments-link" href="#">Reply</a>
+                      </div>
+                    </div>
+                  </div>
+                  <form class="blog-details__form">
+                    <h4 class="blog-details__form-title">Leave A Comment</h4>
+                    <input class="blog-details__form-input blog-details__form-input--user" type="text" placeholder="Name">
+                    <input class="blog-details__form-input blog-details__form-input--email" type="text" placeholder="Email">
+                    <textarea class="blog-details__form-textarea blog-details__form-input--message"
+                      placeholder="Comment"></textarea>
+                    <button class="blog-details__form-button" type="submit">POST COMMENT</button>
+                  </form>
                 </div>
               </div>
-              <h3 class="blog-page__title">Fonsectetur adipisicing elit</h3>
-              <p class="blog-page__text">
-                consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-                ad minim
-                veniam, quis nostrud exercitation ullamco laboris nisi ut alLorem ipsum dolor sit amet, consectetur
-                adipisicing elit,
-                sed do eiusmod tempor incididunt ut labore et dolore magna
-              </p>
-              <a class="blog-page__link" href="#">View More</a>
-            </div>
-            <div class="blog-page__item" style="background-image: url('images/blog/blog-3.jpg');">
-              <div class="blog-page__img">
-                <div class="blog-page__link-box">
-                  <a class="blog__date" href="#">28 JANUARY, 2020</a>
-                  <a class="blog__author" href="#">BY ADMIN</a>
-                </div>
-              </div>
-              <h3 class="blog-page__title">Fsectetur adipisicing tempor incididunt</h3>
-              <p class="blog-page__text">
-                consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-                ad minim
-                veniam, quis nostrud exercitation ullamco laboris nisi ut alLorem ipsum dolor sit amet, consectetur
-                adipisicing elit,
-                sed do eiusmod tempor incididunt ut labore et dolore magna
-              </p>
-              <a class="blog-page__link" href="#">View More</a>
-            </div>
-            <div class="blog-page__item" style="background-image: url('images/blog/blog-4.jpg');">
-              <div class="blog-page__img">
-                <div class="blog-page__link-box">
-                  <a class="blog__date" href="#">28 JANUARY, 2020</a>
-                  <a class="blog__author" href="#"> BY ADMIN</a>
-                </div>
-              </div>
-              <h3 class="blog-page__title">Vonsectetur adipisicing elit</h3>
-              <p class="blog-page__text">
-                consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-                ad minim
-                veniam, quis nostrud exercitation ullamco laboris nisi ut alLorem ipsum dolor sit amet, consectetur
-                adipisicing elit,
-                sed do eiusmod tempor incididunt ut labore et dolore magna
-              </p>
-              <a class="blog-page__link" href="#">View More</a>
-            </div>
-            <div class="pagination">
-              <a class="pagination__link pagination__link--active" href="#">1</a>
-              <a class="pagination__link" href="#">2</a>
-              <a class="pagination__link" href="#">3</a>
-              <a class="pagination__link-btn" href="#">Next</a>
             </div>
           </div>
           <div class="blog-page__aside">
