--- a/app/index.html
+++ b/app/index.html
@@ -441,6 +441,7 @@
             <a class="blog__link-img" href="#">
               <img class="blog__img" src="images/blog/1.jpg" alt="блог">
             </a>
+            <div class="blog__news">News</div>
             <div class="blog__text-box">
               <div class="blog__text">
                 Diusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam
@@ -455,6 +456,7 @@
             <a class="blog__link-img" href="#">
               <img class="blog__img" src="images/blog/2.jpg" alt="блог">
             </a>
+            <div class="blog__news">News</div>
             <div class="blog__text-box">
               <div class="blog__text">
                 Aonsectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore
@@ -469,6 +471,7 @@
             <a class="blog__link-img" href="#">
               <img class="blog__img" src="images/blog/3.jpg" alt="блог">
             </a>
+            <div class="blog__news">News</div>
             <div class="blog__text-box">
               <div class="blog__text">
                 Rncididunt ut labore et dolore magna aliqua. Ut enim
@@ -503,7 +506,6 @@
         </div>
       </div>
     </section>
-
   </main>
 
   <footer class="footer">
