--- a/app/product-one.html
+++ b/app/product-one.html
@@ -531,6 +531,12 @@
                 <div class="product__price">$29.00</div>
               </div>
             </div>
+            <div class="pagination">
+              <a class="pagination__link pagination__link--active" href="#">1</a>
+              <a class="pagination__link" href="#">2</a>
+              <a class="pagination__link" href="#">3</a>
+              <a class="pagination__link-btn" href="#">Next</a>
+            </div>
           </div>
         </div>
       </div>
