--- a/app/product-two.html
+++ b/app/product-two.html
@@ -337,11 +337,38 @@
                 </div>
               </div>
             </div>
+            <div class="pagination">
+              <a class="pagination__link pagination__link--active" href="#">1</a>
+              <a class="pagination__link" href="#">2</a>
+              <a class="pagination__link" href="#">3</a>
+              <a class="pagination__link-btn" href="#">Next</a>
+            </div>
           </div>
         </div>
       </div>
       </div>
     </section>
+    <div class="login__partners">
+      <div class="container-content">
+        <ul class="partners__list">
+          <li class="partners__item">
+            <img class="partners__item-img" src="images/partners/1.png" alt="partner logo">
+          </li>
+          <li class="partners__item">
+            <img class="partners__item-img" src="images/partners/2.png" alt="partner logo">
+          </li>
+          <li class="partners__item">
+            <img class="partners__item-img" src="images/partners/3.png" alt="partner logo">
+          </li>
+          <li class="partners__item">
+            <img class="partners__item-img" src="images/partners/4.png" alt="partner logo">
+          </li>
+          <li class="partners__item">
+            <img class="partners__item-img" src="images/partners/5.png" alt="partner logo">
+          </li>
+        </ul>
+      </div>
+    </div>
   </main>
   <footer class="footer">
     <div class="container-content">
