--- a/app/about.html
+++ b/app/about.html
@@ -235,6 +235,7 @@
             <a class="blog__link-img" href="#">
               <img class="blog__img" src="images/blog/1.jpg" alt="blog">
             </a>
+            <div class="blog__news">News</div>
             <div class="blog__text-box">
               <div class="blog__text">
                 Diusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam
@@ -249,6 +250,7 @@
             <a class="blog__link-img" href="#">
               <img class="blog__img" src="images/blog/2.jpg" alt="blog">
             </a>
+            <div class="blog__news">News</div>
             <div class="blog__text-box">
               <div class="blog__text">
                 Aonsectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore
@@ -263,6 +265,7 @@
             <a class="blog__link-img" href="#">
               <img class="blog__img" src="images/blog/3.jpg" alt="blog">
             </a>
+            <div class="blog__news">News</div>
             <div class="blog__text-box">
               <div class="blog__text">
                 Rncididunt ut labore et dolore magna aliqua. Ut enim
