--- a/app/contact.html
+++ b/app/contact.html
@@ -147,6 +147,7 @@
             <a class="blog__link-img" href="#">
               <img class="blog__img" src="images/blog/1.jpg" alt="блог">
             </a>
+            <div class="blog__news">News</div>
             <div class="blog__text-box">
               <div class="blog__text">
                 Diusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam
@@ -161,6 +162,7 @@
             <a class="blog__link-img" href="#">
               <img class="blog__img" src="images/blog/2.jpg" alt="блог">
             </a>
+            <div class="blog__news">News</div>
             <div class="blog__text-box">
               <div class="blog__text">
                 Aonsectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore
@@ -175,6 +177,7 @@
             <a class="blog__link-img" href="#">
               <img class="blog__img" src="images/blog/3.jpg" alt="блог">
             </a>
+            <div class="blog__news">News</div>
             <div class="blog__text-box">
               <div class="blog__text">
                 Rncididunt ut labore et dolore magna aliqua. Ut enim
