--- a/app/terms.html
+++ b/app/terms.html
@@ -128,6 +128,7 @@
             <a class="blog__link-img" href="#">
               <img class="blog__img" src="images/blog/1.jpg" alt="блог">
             </a>
+            <div class="blog__news">News</div>
             <div class="blog__text-box">
               <div class="blog__text">
                 Diusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam
@@ -142,6 +143,7 @@
             <a class="blog__link-img" href="#">
               <img class="blog__img" src="images/blog/2.jpg" alt="блог">
             </a>
+            <div class="blog__news">News</div>
             <div class="blog__text-box">
               <div class="blog__text">
                 Aonsectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore
@@ -156,6 +158,7 @@
             <a class="blog__link-img" href="#">
               <img class="blog__img" src="images/blog/3.jpg" alt="блог">
             </a>
+            <div class="blog__news">News</div>
             <div class="blog__text-box">
               <div class="blog__text">
                 Rncididunt ut labore et dolore magna aliqua. Ut enim
