added product detalis page

--- a/app/about.html
+++ b/app/about.html
@@ -242,8 +242,8 @@
               </div>
             </div>
             <div class="blog__linkbox">
-              <a class="blog__date" href="#"> 28 JANUARY, 2020</a>
-              <a class="blog__author" href="#"> BY ADMIN</a>
+              <a class="blog__date" href="#">28 JANUARY, 2020</a>
+              <a class="blog__author" href="#">BY ADMIN</a>
             </div>
           </div>
           <div class="blog__item">
@@ -257,8 +257,8 @@
               </div>
             </div>
             <div class="blog__linkbox">
-              <a class="blog__date" href="#"> 28 JANUARY, 2020</a>
-              <a class="blog__author" href="#"> BY ADMIN</a>
+              <a class="blog__date" href="#">28 JANUARY, 2020</a>
+              <a class="blog__author" href="#">BY ADMIN</a>
             </div>
           </div>
           <div class="blog__item">
@@ -272,8 +272,8 @@
               </div>
             </div>
             <div class="blog__linkbox">
-              <a class="blog__date" href="#"> 28 JANUARY, 2020</a>
-              <a class="blog__author" href="#"> BY ADMIN</a>
+              <a class="blog__date" href="#">28 JANUARY, 2020</a>
+              <a class="blog__author" href="#">BY ADMIN</a>
             </div>
           </div>
         </div>
