--- a/app/blog-details.html
+++ b/app/blog-details.html
@@ -65,7 +65,7 @@
             <li class="breadcrumbs__item">
               <a class="breadcrumbs__item-link" href="#">Home</a>
               <a class="breadcrumbs__item-link" href="#">Blog</a>
-              <a class="breadcrumbs__item-link" href="#">Blog Details</a>
+              <a class="breadcrum bs__item-link" href="#">Blog Details</a>
             </li>
           </ul>
         </div>
@@ -210,8 +210,10 @@
                   </div>
                   <form class="blog-details__form">
                     <h4 class="blog-details__form-title">Leave A Comment</h4>
-                    <input class="blog-details__form-input blog-details__form-input--user" type="text" placeholder="Name">
-                    <input class="blog-details__form-input blog-details__form-input--email" type="text" placeholder="Email">
+                    <input class="blog-details__form-input blog-details__form-input--user" type="text"
+                      placeholder="Name">
+                    <input class="blog-details__form-input blog-details__form-input--email" type="text"
+                      placeholder="Email">
                     <textarea class="blog-details__form-textarea blog-details__form-input--message"
                       placeholder="Comment"></textarea>
                     <button class="blog-details__form-button" type="submit">POST COMMENT</button>
