--- a/app/contact.html
+++ b/app/contact.html
@@ -154,8 +154,8 @@
               </div>
             </div>
             <div class="blog__linkbox">
-              <a class="blog__date" href="#"> 28 JANUARY, 2020</a>
-              <a class="blog__author" href="#"> BY ADMIN</a>
+              <a class="blog__date" href="#">28 JANUARY, 2020</a>
+              <a class="blog__author" href="#">BY ADMIN</a>
             </div>
           </div>
           <div class="blog__item">
@@ -169,8 +169,8 @@
               </div>
             </div>
             <div class="blog__linkbox">
-              <a class="blog__date" href="#"> 28 JANUARY, 2020</a>
-              <a class="blog__author" href="#"> BY ADMIN</a>
+              <a class="blog__date" href="#">28 JANUARY, 2020</a>
+              <a class="blog__author" href="#">BY ADMIN</a>
             </div>
           </div>
           <div class="blog__item">
@@ -184,8 +184,8 @@
               </div>
             </div>
             <div class="blog__linkbox">
-              <a class="blog__date" href="#"> 28 JANUARY, 2020</a>
-              <a class="blog__author" href="#"> BY ADMIN</a>
+              <a class="blog__date" href="#">28 JANUARY, 2020</a>
+              <a class="blog__author" href="#">BY ADMIN</a>
             </div>
           </div>
         </div>
