--- a/app/terms.html
+++ b/app/terms.html
@@ -135,8 +135,8 @@
               </div>
             </div>
             <div class="blog__linkbox">
-              <a class="blog__date" href="#"> 28 JANUARY, 2020</a>
-              <a class="blog__author" href="#"> BY ADMIN</a>
+              <a class="blog__date" href="#">28 JANUARY, 2020</a>
+              <a class="blog__author" href="#">BY ADMIN</a>
             </div>
           </div>
           <div class="blog__item">
@@ -150,8 +150,8 @@
               </div>
             </div>
             <div class="blog__linkbox">
-              <a class="blog__date" href="#"> 28 JANUARY, 2020</a>
-              <a class="blog__author" href="#"> BY ADMIN</a>
+              <a class="blog__date" href="#">28 JANUARY, 2020</a>
+              <a class="blog__author" href="#">BY ADMIN</a>
             </div>
           </div>
           <div class="blog__item">
@@ -165,8 +165,8 @@
               </div>
             </div>
             <div class="blog__linkbox">
-              <a class="blog__date" href="#"> 28 JANUARY, 2020</a>
-              <a class="blog__author" href="#"> BY ADMIN</a>
+              <a class="blog__date" href="#">28 JANUARY, 2020</a>
+              <a class="blog__author" href="#">BY ADMIN</a>
             </div>
           </div>
         </div>
